Prevent overflow of long links and words
When a word (or any string withtout breakpoints (spaces, dashes....), making links the most common place where this becamoes an issue)  is wider than its container, the text will simply overflow any container, including the viewport. This commit fixes this behaviour by making the word-drap strategy of the browser more aggresive.

--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -183,6 +183,10 @@ article {
       border-radius: 3px;
     }
   }
+  
+  & p {
+    overflow-wrap: anywhere;
+  }
 }
 
 .backlinks a {
